// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Footer component rendering renders Footer in english 1`] = `
<div>
  <footer
    class="uber-color2"
  >
    <div>
      <a
        href="/Contact+FAQ"
      >
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Contact
        </button>
      </a>
      <br />
      <span>
        © 2018 - 
        2020
      </span>
      <br />
      <span>
        Created by Marianne & Thomas 
        <br />
        App icon by 
        <a
          href="https://icones8.fr"
        >
          icons8
        </a>
         & 
        <a
          href="https://www.flaticon.com/authors/dmitri13"
          title="dmitri13"
        >
          dmitri13
        </a>
        <br />
      </span>
    </div>
    <div
      class="button-footer row txt-align"
    >
      <a
        href="/DataInformations"
      >
        <span
          class="col"
        >
          Personal data
        </span>
      </a>
      <a
        href="/Others"
      >
        <span
          class="col"
        >
          Our other services
        </span>
      </a>
    </div>
  </footer>
</div>
`;

exports[`Testing the Footer component rendering renders Footer in french 1`] = `
<div>
  <footer
    class="uber-color2"
  >
    <div>
      <a
        href="/Contact+FAQ"
      >
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Contact
        </button>
      </a>
      <br />
      <span>
        © 2018 - 
        2020
      </span>
      <br />
      <span>
        Créé par Marianne & Thomas 
        <br />
        Icônes de l'application par 
        <a
          href="https://icones8.fr"
        >
          icons8
        </a>
         & 
        <a
          href="https://www.flaticon.com/authors/dmitri13"
          title="dmitri13"
        >
          dmitri13
        </a>
        <br />
      </span>
    </div>
    <div
      class="button-footer row txt-align"
    >
      <a
        href="/DataInformations"
      >
        <span
          class="col"
        >
          Données personnelles
        </span>
      </a>
      <a
        href="/Others"
      >
        <span
          class="col"
        >
          Nos autres services
        </span>
      </a>
    </div>
  </footer>
</div>
`;

exports[`Testing the Footer component rendering renders Footer without crashing 1`] = `
<div>
  <footer
    class="uber-color2"
  >
    <div>
      <a
        href="/Contact+FAQ"
      >
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Contact
        </button>
      </a>
      <br />
      <span>
        © 2018 - 
        2020
      </span>
      <br />
      <span>
        Créé par Marianne & Thomas 
        <br />
        Icônes de l'application par 
        <a
          href="https://icones8.fr"
        >
          icons8
        </a>
         & 
        <a
          href="https://www.flaticon.com/authors/dmitri13"
          title="dmitri13"
        >
          dmitri13
        </a>
        <br />
      </span>
    </div>
    <div
      class="button-footer row txt-align"
    >
      <a
        href="/DataInformations"
      >
        <span
          class="col"
        >
          Données personnelles
        </span>
      </a>
      <a
        href="/Others"
      >
        <span
          class="col"
        >
          Nos autres services
        </span>
      </a>
    </div>
  </footer>
</div>
`;
